refactor: fix sql files and login text

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-<header th:replace="/fragment/common.html :: header" ></header>
+<header th:replace="/fragment/common.html :: header"></header>
 
     <div class="container d-flex justify-content-center">
 
@@ -32,8 +32,8 @@
                 </div>
             </div>
             <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around" >
-                <h2 >Hello, my friend</h2>
-                <p>If you have a account, please login with you personal detail
+                <h2 >Welcome Back!</h2>
+                <p> Get more recipes here!
                 </p>
                 <a class="rounded-lg w-75 btn btn-outline-light" href="/login">Here to login</a>
             </div>
