--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -16,12 +16,13 @@
     <div class="row my-5 w-75 animate__fadeInRightBig animate__bounceIn">
         <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around">
 
-            <h2>Welcome home!</h2>
-            <p>If we want to learn new recipe and improve you cook skill, please create account to save favourite recipe
+            <h2>Hello, Friend!</h2>
+            <p>Enter your personal details and start journey with us
+
 
 
             </p>
-            <a class="rounded-lg w-75 btn btn-outline-light" href="/register">Here to create account</a>
+            <a class="rounded-lg w-75 btn btn-outline-light" href="/register">Here to create an account</a>
         </div>
         <div class="col-8 shadow-lg d-flex flex-column p-5 rounded-left align-items-center">
             <h1 class="title mb-5 font-comic animate__bounceIn">
