Add amount to the ingredients and rounded the recipe cover photo.

--- a/src/main/resources/templates/recipe/detail.html
+++ b/src/main/resources/templates/recipe/detail.html
@@ -35,7 +35,7 @@
 <!-- Description area-->
 <div class="container-fluid w-60 padding">
     <div style="text-align:center" class="col-md-12">
-        <img src="/images/step_sample/1.png" class="img-fluid" id="img1">
+        <img src="/images/step_sample/1.png" class="img-fluid rounded-50" id="img1">
     </div>
     <hr>
     <div class="row padding">
@@ -88,22 +88,22 @@
     <div class="checkbox">
         <div class="custom-control custom-checkbox col-md-12 ml-5" >
             <input type="checkbox" class="custom-control-input" id="customCheck1">
-            <label class="custom-control-label" for="customCheck1">Chicken</label>
+            <label class="custom-control-label" for="customCheck1">4 pounds Chicken thighs</label>
         </div>
 
         <div class="custom-control custom-checkbox col-md-12 ml-5">
             <input type="checkbox" class="custom-control-input" id="customCheck2">
-            <label class="custom-control-label" for="customCheck2">Lemon</label>
+            <label class="custom-control-label" for="customCheck2">1/2 cup fresh Lemon juice</label>
         </div>
 
         <div class="custom-control custom-checkbox col-md-12 ml-5">
             <input type="checkbox" class="custom-control-input" id="customCheck3">
-            <label class="custom-control-label" for="customCheck3">Potato</label>
+            <label class="custom-control-label" for="customCheck3">3 Potatoes</label>
         </div>
 
         <div class="custom-control custom-checkbox col-md-12 ml-5">
             <input type="checkbox" class="custom-control-input" id="customCheck4">
-            <label class="custom-control-label" for="customCheck4">Salt</label>
+            <label class="custom-control-label" for="customCheck4">1 tablespoon kosher Salt</label>
         </div>
     </div>
     <hr>
