--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -63,9 +63,9 @@
 </header>
 
 <footer th:fragment="footer">
-    <div class="inner footer">
+    <div class="footer mt-auto d-flex  justify-content-center">
 
-            <div class="text-center text-white ">
+            <div class=" text-white ">
                 <p>
                     <strong>Cookiez</strong> by "Ditto"<i class="fa fa-bug"></i>
                 </p>
