--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -36,10 +36,10 @@
                     <a class="nav-link" href="/"><i class="iconfont icon-xuanzhongshangcheng"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
+                    <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="iconfont icon-tag mr-1"></i>Tags</a>
+                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
                 </li>
             </ul>
             <form class="form-inline mx-2 my-lg-0">
@@ -62,7 +62,7 @@
 </header>
 
 <footer th:fragment="footer">
-    <div class="inner footer">
+    <div class="footer mt-auto d-flex justify-content-center">
         <center>
             <div>
                 <p>
