--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -191,8 +191,8 @@
                     <div>
                         <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A" aria-hidden="true"> </i></a>
                         <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a id="light" class="card-link" style="display: inline; clear: both; "><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
-                        <a id="solid" class="card-link" style="display: none; "><i class="fa fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a id="light" class="card-link" onclick="changeToSolid(this)" style="display: inline; clear: both; "><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
+                        <a id="solid" class="card-link" onclick="changeToLight(this)" style="display: none; "><i class="fa fa-heart" style="color: #C14A4A" aria-hidden="true"></i> </a>
                     </div>
                 </div>
             </div>
@@ -200,29 +200,12 @@
     </div>
 </div>
 
-<script type="text/javascript">
-  var light = document.getElementById("light");
-  var solid = document.getElementById("solid");
-
-  //change it to solid
-  light.onclick=function(){
-    this.style.display = 'none';
-    solid.style.display = 'inline';
-
-  }
-  //change it to light
-  solid.onclick=function(){
-    this.style.display = 'none';
-    light.style.display = 'inline';
-  }
-</script>
-
 <!-- Footer -->
 <footer th:replace="/fragment/common.html :: footer"></footer>
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script th:inline="javascript">
 
+<script type="text/javascript" src="/js/index.js">
 </script>
 </body>
 </html>
