--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -36,19 +36,19 @@
                 <li class="nav-item ml-4">
                     <a class="nav-link" href="/"><i class="iconfont icon-xuanzhongshangcheng"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
-<<<<<<< HEAD
-                <li class="nav-item">
-                    <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
-=======
+<!--<<<<<<< HEAD-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="/pantry"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>-->
+<!--=======-->
                 <li class="nav-item ml-4">
                     <a class="nav-link" href="/pantry/show"><i class="iconfont icon-lanzi mr-1"></i>Pantry</a>
                 </li>
                 <li class="nav-item ml-4">
-                    <a class="nav-link" href="#"><i class="iconfont icon-tag mr-1"></i>Tags</a>
->>>>>>> 98e30172ebd031a48a2ce6c4b3d5a302ac689384
+                    <a class="nav-link" href="/tags"><i class="iconfont icon-tag mr-1"></i>Tags</a>
+<!--&gt;>>>>>> 98e30172ebd031a48a2ce6c4b3d5a302ac689384-->
                 </li>
             </ul>
             <form class="form-inline mx-2 my-lg-0 ml-5">
