footer update mt-200

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -63,7 +63,7 @@
 </header>
 
 <footer th:fragment="footer">
-    <div class="footer mt-auto d-flex justify-content-center">
+    <div class="footer d-flex justify-content-center" >
 
             <div class=" text-white ">
                 <p>
