feat: user can see recipe detail

--- a/src/main/resources/templates/recipe/add.html
+++ b/src/main/resources/templates/recipe/add.html
@@ -219,6 +219,13 @@
                     headers: {
                         'Content-Type': 'multipart/form-data'
                     }
+                }).then(res => {
+                    console.log(res)
+                    bootbox.alert("Add a recipe Successfully!")
+                    // window.location.replace("/");
+                }).catch(err => {
+                    bootbox.alert("Failed to add")
+                    console.log(err)
                 })
                 formData = new FormData()
             }
