--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -14,10 +14,10 @@
         $(document).ready(function () {
             $("input:checkbox").click(function () {
 
-                if($(this).is(':checked') == true){
-                    $(this).next().css("text-decoration","line-through");
-                }else{
-                    $(this).next().css("text-decoration","none");
+                if ($(this).is(':checked') == true) {
+                    $(this).next().css("text-decoration", "line-through");
+                } else {
+                    $(this).next().css("text-decoration", "none");
                 }
             });
         });
@@ -26,7 +26,7 @@
 </head>
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
-<div class ="container-fluid w-60">
+<div class="container-fluid w-60">
     <div class="row welcome ml-auto">
         <h1 class="display-4" th:text="${recipeDTO.getRecipeName()}">Greek Lemon Chicken and Potatoes</h1>
         <hr>
@@ -45,19 +45,24 @@
             </div>
             <div>
                 <h3>Description</h3>
-                <p class="lead" th:text="${recipeDTO.getRecipeDescription()}">I don't have the energy or courage to cater for a living but, if I did, this Greek lemon chicken and potatoes would be one of my go-to entrees, and not just for big, fat weddings. It's a proven crowd-pleaser, simple to make, and easy on the wallet. </p>
+                <p class="lead" th:text="${recipeDTO.getRecipeDescription()}">I don't have the energy or courage to
+                    cater for a living but, if I did, this Greek lemon chicken and potatoes would be one of my go-to
+                    entrees, and not just for big, fat weddings. It's a proven crowd-pleaser, simple to make, and easy
+                    on the wallet. </p>
             </div>
         </div>
         <div class="col-md-12 col-lg-4">
             <h3>Tags</h3>
 
-            <button th:each="tag: ${recipeDTO.getTagList()}" th:text="${tag.getTagName()}" type="button" class="btn btn-outline-primary ml-2 mb-2">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tag-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1H2zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+            <button th:each="tag: ${recipeDTO.getTagList()}" th:text="${tag.getTagName()}" type="button"
+                    class="btn btn-outline-primary ml-2 mb-2">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-tag-fill" fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                          d="M2 1a1 1 0 0 0-1 1v4.586a1 1 0 0 0 .293.707l7 7a1 1 0 0 0 1.414 0l4.586-4.586a1 1 0 0 0 0-1.414l-7-7A1 1 0 0 0 6.586 1H2zm4 3.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
                 </svg>
                 Greek
             </button>
-
         </div>
     </div>
 </div>
@@ -67,15 +72,13 @@
     <h2>Ingredients</h2>
     <hr>
     <div class="checkbox">
-
-
-        <div class="custom-control custom-checkbox col-md-12 ml-5" th:each="ingredient:${recipeDTO.getIngredientDTOList()}">
-            <input type="checkbox" class="custom-control-input" >
-            <label  th:text="${ingredient.getIngredientName()}">Lemon</label>
-            <label  th:text="${ingredient.getAmount()}">Lemon</label>
+        <div class="custom-control custom-checkbox col-md-12 ml-5"
+             th:each="ingredient:${recipeDTO.getIngredientDTOList()}">
+            <input type="checkbox" class="custom-control-input" id="customCheck1">
+            <label class="custom-control-label" for="customCheck1"><span
+                    th:text="${ingredient.getIngredientName()}"></span> <span
+                    th:text="${ingredient.getAmount()}"></span></label>
         </div>
-
-
     </div>
     <hr>
 </div>
@@ -86,7 +89,7 @@
     <h2>Instructions</h2>
     <hr>
     <div class="col-md-12">
-        <div  th:each="step: ${recipeDTO.getStepDTOList()}">
+        <div th:each="step: ${recipeDTO.getStepDTOList()}">
             <h4 th:text="${'Step'+step.getStepOrder()}"></h4>
             <div class="row padding">
                 <div class="col-md-12 col-lg-8">
@@ -95,7 +98,7 @@
                 </div>
                 <div class="col-md-12 col-lg-4">
                     <img th:src="@{(${'/static'+step.getImgPath()})}" class="img-fluid">
-<!--                    <img src="/static/images/recipes/19/stepImg-1.png" class="img-fluid" alt="">-->
+                    <!--                    <img src="/static/images/recipes/19/stepImg-1.png" class="img-fluid" alt="">-->
                 </div>
             </div>
         </div>
