use aws to store the data

--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -111,6 +111,7 @@
     <!--  request http lib  -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="/js/public/common.js"></script>
 </div>
 </body>
