--- a/src/main/resources/templates/recipe/add.html
+++ b/src/main/resources/templates/recipe/add.html
@@ -15,17 +15,20 @@
 <div class="container d-flex flex-column p-5 w-60">
     <input class=" mb-5 border-red-C14A4A" type="text" id="input-title" placeholder="Please enter recipe name"
            style="height:60px;">
-    <img class="bg-grad-888276 mb-3" id="cover" src="http://iph.href.lu/1280x1024"
-         alt="" height="520" style="height:520px"></img>
+    <img class="bg-grad-888276 mb-3 rounded-20" id="cover" src="http://iph.href.lu/1280x1024"
+         alt="" height="520" style="height:520px">
     <!--    <button class="btn bg-red-C14A4A rounded-50  w-25 ml-auto mb-5">Upload cover</button>-->
-    <input type="file" class="btn bg-red-C14A4A rounded-50  w-25 ml-auto mb-5" id="cover-input"
-           placeholder="Upload cover" onchange="uploadCover(this)" accept="image/jpg,image/jpeg,image/png,image/PNG">
-    <i class="iconfont icon-pen"></i>
-    <textarea class="mb-3 input-area-red mb-2" placeholder="Describe Your Recipe" id="input-describe"></textarea>
-    <i class="iconfont icon-pen"></i>
-    <input class="input-red mb-5" type="text" id="input-tags" placeholder="Add Tags (separated by commas)">
+        <label class="btn custom-file-upload btn-red ml-auto">
+            <input type="file"  placeholder="Upload cover" onchange="uploadCover(this)" accept="image/jpg,image/jpeg,image/png,image/PNG">
+            <i class="iconfont icon-LocalUpload"></i>
+        Upload Cover
+    </label>
+    <h4 class="font-orkney">Description</h4>
+    <textarea class="mb-5 input-area-red iconfont" placeholder="&#xedce; Describe Your Recipe" id="input-describe"></textarea>
+    <h4 class="font-orkney">Tags</h4>
+    <input class="input-red mb-5 iconfont w-75" type="text" id="input-tags" placeholder="&#xe618;Add Tags(separated by commas)">
     <div class="d-flex flex-column mb-5">
-        Ingredients
+        <h4 class="font-orkney">Ingredients</h4>
         <div class="d-flex flex-column mb-4 justify-content-between" id="div-ingredients">
             <div class="d-flex justify-content-between" id="ingred-1"><input class="mr-3 input-red" type="text"
                                                                              placeholder="Name"> <input
@@ -35,23 +38,27 @@
             </div>
 
         </div>
-
-        <button class="w-25 btn btn-red" id="btn-addIngredient">Add a ingredient</button>
+        <button class="w-25 btn btn-red" id="btn-addIngredient">Add an ingredient</button>
     </div>
     <!--    Step area-->
     <div class="d-flex flex-column mb-5" id="div-steps">
 
         <div class="d-flex  justify-content-between align-content-between" id="step-1">
-            <div class="d-flex flex-column w-75 mr-3"> Step1
-                <textarea class="h-100 input-area-red" name="textarea"
-                          placeholder="Add step here"></textarea>
+            <div class="d-flex flex-column w-75 mr-3 "> <h4 class="font-comic">Step1</h4>
+                <textarea class="h-100 input-area-red iconfont" name="textarea"
+                          placeholder="&#xe7c0; Add step here"></textarea>
 
             </div>
             <div class="d-flex flex-column  "><img id="img-step-1" class="rounded-20 mb-1 mt-2"
                                                   src="http://iph.href.lu/1280x1024"
                                                   alt="" width="300"
-                                                 > <input id="img-input-step-1" type="file" class="btn-red"
-                                                                       ACCEPT="image/*" onchange="uploadStepImg(1)">
+                                                 >
+                <label class="btn custom-file-upload btn-red">
+                    <input id="img-input-step-1" type="file"
+                           ACCEPT="image/*" onchange="uploadStepImg(1)">
+                    <i class="iconfont icon-LocalUpload"></i>
+                     Upload a Step Picture
+                </label>
             </div>
 
         </div>
@@ -61,7 +68,7 @@
     <!--    Operation Area-->
     <div class="d-flex">
         <button class="btn btn-red" id="btn-addStep">Add a step</button>
-        <button class="btn btn-red" id="btn-removeStep">remove last step</button>
+        <button class="btn btn-red" id="btn-removeStep">Remove last step</button>
         <button class="btn btn-red ml-auto" onclick="submit()">Submit</button>
     </div>
 
