--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -35,16 +35,16 @@
             </div>
             <div class="w-75">
                 <div class="form-group  ">
-                    <label for="username"><i class="fa fa-user"></i> Username</label>
-                    <input type="text" class="form-control" name="username" id="username"
-                           placeholder="Email or Username">
+                    <label for="username">Username</label>
+                    <input type="text" class="form-control iconfont" name="username" id="username"
+                           placeholder="&#xe601;Username">
                 </div>
 
                 <div class="form-group">
-                    <label for="password"> <i class="fa fa-lock"></i>Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control iconfont" name="password" id="password" placeholder="&#xe672;Password">
                 </div>
-                <button class="btn btn-light" onclick="handleLoginBtn(this)">LOGIN</button>
+                <button class="btn btn-danger" onclick="handleLoginBtn(this)">LOGIN</button>
             </div>
         </div>
 
