--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -21,14 +21,14 @@
                 </h1>
                 <div class="w-75" >
                     <div class="form-group ">
-                        <label for="username"><i class="fa fa-envelope"></i> Email</label>
-                        <input type="email" class="form-control" id="username" placeholder="Email">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control iconfont" id="username" placeholder="&#xe601; Username">
                     </div>
                     <div class="form-group">
-                        <label for="password"> <i class="fa fa-lock"></i>Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control iconfont" id="password" placeholder="&#xe672; Password">
                     </div>
-                    <button  class="btn btn-light" onclick="signUp(this)">SIGN UP</button>
+                    <button  class="btn btn-danger" onclick="signUp(this)">SIGN UP</button>
                 </div>
             </div>
             <div class="col-4 bg-red-C14A4A   rounded-right bg-red- d-flex flex-column align-items-center text-center text-white justify-content-around" >
