--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -12,28 +12,29 @@
 <body>
 <header th:replace="/fragment/common.html :: header"></header>
 <div class="container d-flex  justify-content-center">
-    <div class="d-flex flex-column w-75 my-5 align-items-center" >
+    <div class="d-flex flex-column w-75 my-5 align-items-center">
         <h2 class="font-comic">My profile</h2>
-<!--     TODO   Need prefect distance between icon and input-->
+        <!--     TODO   Need prefect distance between icon and input-->
         <div class="d-flex flex-column shadow-lg  my-3 p-5 rounded-20" style="width:60%;">
-            <div class="text-center my-3 d-flex justify-content-center">
-                <img src="/images/avatar.jpg" class="rounded-circle shadow-sm" alt="..." width="150" height="150"> <i class="iconfont icon-pencil mt-auto"></i>
+            <div class="text-center my-3 d-flex flex-column align-items-center">
+                <img th:src="@{${user.getAvatarPath()!=null?user.getAvatarPath():'/images/avatar.jpg'}}" class="rounded-circle shadow-sm" alt="..." width="200" id="img-avatar" >
+                <label class="btn custom-file-upload btn-red mt-3">
+                    <input type="file" placeholder="Upload cover" onchange="uploadAvatar(this)" id="input-avatar"
+                           accept="image/jpg,image/jpeg,image/png,image/PNG">
+                    <i class="iconfont icon-LocalUpload"></i>
+                    Upload Avatar
+                </label>
             </div>
             <div class="form-group">
-                <label for="username" class="mt-auto"><i class="iconfont icon-seeuser"></i> Username</label>
-                <input type="text" class="form-control rounded-pill" id="username" th:value="${user.username}" >
+                <label for="username" class="mt-auto"> Username</label>
+                <input type="text" class="form-control rounded-pill mb-4" id="username" th:value="${user.username}" >
+                <label for="oldPassword">Old Password</label>
+                <input type="password" class="form-control rounded-pill iconfont" id="oldPassword" placeholder="&#xe672;">
+                <label for="newPassword">New Password</label>
+                <input type="password" class="form-control rounded-pill iconfont" id="newPassword" placeholder="&#xe672;">
             </div>
-            <div class="form-group">
-                <label for="email"><i class="iconfont icon-EmailHili"></i>Email</label>
-                <input type="password" class="form-control rounded-pill" id="email" >
-            </div>
-            <div class="form-group">
-                <label for="oldPassword"><i class="iconfont icon-lock mb-2"></i>Old Password</label>
-                <input type="password" class="form-control rounded-pill" id="oldPassword">
-                <label for="newPassword"><i class="iconfont icon-lock"></i>New Password</label>
-                <input type="password" class="form-control rounded-pill" id="newPassword">
-            </div>
-            <button class="btn bg-red-C14A4A rounded-50 ml-auto w-25"> Save<i class="iconfont icon-rightarrow ml-2"></i></button>
+            <button class="btn bg-red-C14A4A rounded-50 ml-auto w-25" onclick="saveProfile()"> Save<i class="iconfont icon-rightarrow ml-2"></i>
+            </button>
 
         </div>
 
@@ -43,10 +44,12 @@
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
+<script th:inline="javascript">
+let user=[[${user}]]
+let userId=user['userId'];
+</script>
 <script type="text/javascript" src="/js/user/profile.js">
 </script>
-<script th:inline="javascript">
 
-</script>
 </body>
 </html>
