--- a/src/main/resources/templates/user/kitchen.html
+++ b/src/main/resources/templates/user/kitchen.html
@@ -15,7 +15,7 @@
 <div class="container d-flex flex-column align-items-center">
     <div class="d-flex flex-column my-5 align-items-center">
         <div class="text-center my-3">
-            <img src="/images/avatar.jpg" class="rounded-circle shadow-sm" alt="..." width="150" height="150">
+            <img th:src="@{${user.getAvatarPath()!=null?user.getAvatarPath():'/images/avatar.jpg'}}" class="rounded-circle shadow-sm" alt="..." width="150" height="150">
         </div>
         <h2 class="text-grad-888276 ">Admin's Kitchen</h2>
         <div class="my-2">
@@ -65,8 +65,8 @@
 </div>
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script type="text/javascript" src="/js/">
-</script>
+<!--<script type="text/javascript" src="/js/">-->
+<!--</script>-->
 <script th:inline="javascript">
 
 </script>
