--- a/src/main/resources/templates/user/saves.html
+++ b/src/main/resources/templates/user/saves.html
@@ -69,8 +69,8 @@
 </div>
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
-<script type="text/javascript" src="/js/">
-</script>
+<!--<script type="text/javascript" src="/js/">-->
+<!--</script>-->
 <script th:inline="javascript">
 
 </script>
