--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -69,25 +69,29 @@
         </tr>
         -->
 
-        <div class="col-sm-3 ">
-            <div class="card p-3 shadow-sm" style="color: #C14A4A; width: 225px; ">
-                <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
-
-                <div class="card-body">
-                    <h5 class="card-title">Fired rice</h5>
-                    <p class="card-text">Author: Zhihao Liang</p>
+        <div class="col-sm-3">
+            <a th:href="@{${vo.url}}">
+                <div class="p-3  d-flex flex-column shadow-sm rounded-10 shadow-0-2-4 ">
+                    <img class="rounded-20" src="/images/fired_rice.jpg" alt="">
+                    <span style="font-size: 20px" th:text="${vo.recipeName}"></span>
+                    <p style="font-size: 14px;color: #6b6668;"
+                       th:text="${#strings.abbreviate(vo.recipeDescription,100) }">Cooking a perfect batch of
+                        white rice without a rice ... </p>
+                    <span class="d-flex"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i> <span
+                            class="ml-auto" style="font-size: 13px" th:text="${'By '+vo.author}"> Zhihao Liang</span>
+                </span>
                 </div>
-
-<!--                <div class="card-body text-center">-->
-<!--                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"-->
-<!--                                                     aria-hidden="true"> </i></a>-->
-<!--                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>-->
-<!--                    </a>-->
-<!--                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>-->
-<!--                    </a>-->
-<!--                </div>-->
-            </div>
+            </a>
         </div>
+        <!--                <div class="card-body text-center">-->
+        <!--                    <a href="#" class="card-link"><i class="fa fa-bookmark" style="color: #C14A4A"-->
+        <!--                                                     aria-hidden="true"> </i></a>-->
+        <!--                    <a href="#" class="card-link"><i class="fa fa-bars" style="color: #C14A4A" aria-hidden="true"></i>-->
+        <!--                    </a>-->
+        <!--                    <a href="#" class="card-link"><i class="far fa-heart" style="color: #C14A4A" aria-hidden="true"></i>-->
+        <!--                    </a>-->
+        <!--                </div>-->
+
 
         <div class="col-sm-3">
             <div class="card" style="color: #C14A4A; width: 225px;">
@@ -126,7 +130,7 @@
         </div>
 
         <div class="col-sm-3">
-            <div class="card" style="color: #C14A4A; width: 225px;  margin: center;">
+            <div class="card" style="color: #C14A4A; width: 225px;  ">
                 <img src="/images/lava_cake.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Lava cake</h5>
@@ -148,7 +152,7 @@
 <div class="container d-flex justify-content-center my-5">
     <div class="row w-85">
         <div class="col-sm-3">
-            <div class="card" style="width: 225px;  margin: center;">
+            <div class="card" style="width: 225px; ">
                 <img src="/images/pasta.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Pasta</h5>
@@ -166,7 +170,7 @@
         </div>
 
         <div class="col-sm-3">
-            <div class="card" style="width: 225px;  margin: center;">
+            <div class="card" style="width: 225px; ">
                 <img src="/images/blueberry_muffin.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Blueberry muffin</h5>
@@ -184,7 +188,7 @@
         </div>
 
         <div class="col-sm-3">
-            <div class="card" style="width: 225px;  margin: right;">
+            <div class="card" style="width: 225px; ">
                 <img src="/images/veg_burger.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Veg burger</h5>
@@ -202,7 +206,7 @@
         </div>
 
         <div class="col-sm-3">
-            <div class="card" style="width: 225px;  margin: right;">
+            <div class="card" style="width: 225px;  ">
                 <img src="/images/shrimp.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title">Shrimp</h5>
