--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -3,36 +3,44 @@
     color: white;
     background-color: #C14A4A;
 }
+
 input[type="file"] {
     display: none;
 }
+
 .custom-file-upload {
     cursor: pointer;
 }
+
 .text-grad-888276 {
 
     color: #888276;
 }
-textarea,input{
-    resize:none;
+
+textarea, input {
+    resize: none;
     outline: none;
 }
-label{
+
+label {
     font-family: 'OrkneyRegular';
     font-weight: normal;
     font-style: normal;
 }
-.font-orkney{
+
+.font-orkney {
     font-family: 'OrkneyRegular';
     font-weight: normal;
     font-style: normal;
 }
-#input-title::placeholder{
-   font-size: large;
+
+#input-title::placeholder {
+    font-size: large;
     font-family: 'ComicReliefRegular';
     font-weight: normal;
     font-style: normal;
 }
+
 .box {
     display: inline-block;
     width: 200px;
@@ -47,12 +55,14 @@ label{
     -webkit-transition: .3s color, .3s border;
     transition: .3s color, .3s border;
 }
+
 .loader-01 {
     border: .2em dotted currentcolor;
     border-radius: 50%;
     -webkit-animation: 1s loader-01 linear infinite;
     animation: 1s loader-01 linear infinite;
 }
+
 .bg-grad-888276 {
 
     background-color: #888276;
@@ -66,6 +76,7 @@ label{
 
     box-shadow: 2px 2px 5px #888888;
 }
+
 .input-area-red {
 
     border-radius: 10px;
@@ -73,6 +84,7 @@ label{
 
     box-shadow: 2px 2px 5px #888888;
 }
+
 .btn-red {
     color: white;
     background-color: #C14A4A;
@@ -86,7 +98,7 @@ label{
     box-shadow: 2px 2px 5px #888888;
 }
 
-.border-green-28A745{
+.border-green-28A745 {
     border: 3px #28A745 solid;
     border-radius: 20px;
     box-shadow: 2px 2px 5px #888888;
@@ -101,8 +113,23 @@ label{
     border-radius: 20px;
 }
 
+.rounded-10 {
+    border-radius: 10px;
+}
+
 .shadow-2-2-5 {
     box-shadow: 2px 2px 5px #888888;
+}
+
+a, a:hover, a:active, a:visited, a:link, a:focus {
+
+    outline: none;
+    text-decoration: none;
+
+}
+
+.shadow-0-2-4 {
+    box-shadow: 0 2px 4px #888888;
 }
 
 .navbar {
@@ -131,12 +158,18 @@ label{
     background-color: #E5474B;
     margin-top: 200px;
 }
-.w-60{
+
+.w-60 {
     width: 60%;
 }
 
-.my-10{margin-top:12rem!important}
-.text-inkfree{font-family: "Ink Free"}
+.my-10 {
+    margin-top: 12rem !important
+}
+
+.text-inkfree {
+    font-family: "Ink Free"
+}
 
 
 
