search by tag test

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                         <img src="/images/fired_rice.jpg" class="card-img-top" alt="">
                         <div class="card-body">=
                             <td th:text="${recipe.title}" class="card-title">Recipe title</td>
-                            <td th:text="${recipe.auther}" class="card-text">Recipe author</td>
+                            <td th:text="${recipe.author}" class="card-text">Recipe author</td>
                         </div>
                         <div class="card-body text-center">
                             <a href="#" class="card-link">link  </a>
