finalize searching function

--- a/src/main/resources/templates/tag/show.html
+++ b/src/main/resources/templates/tag/show.html
@@ -21,7 +21,7 @@
     </div>
 </div>
 
-<div class="container w-65 px-lg-5 d-flex flex-column align-items-center">
+<!--
     <div class="row w-100 top-buffer">
         <div class="col py-3 m-3 w-30 px-lg-5 border-red-C14A4A">
             <h5 class="row">Regional recipes:</h5>
@@ -42,13 +42,16 @@
             </button>
         </div>
     </div>
+-->
 
-    <div class="container d-flex justify-content-center" id="cardDiv">
+    <div class="container d-flex justify-content-center border-red-C14A4A" id="cardDiv">
+        <div class="d-flex flex-column align-items-center row">
+            <h1 class="text-inkfree" style="font-size:3.2em">Please enter the keywords!</h1>
+        </div>
 
 
-    </div>
 
-</div>
+
 
 
 <th:block th:include="/fragment/common.html :: scripts"></th:block>
